--- a/index.html
+++ b/index.html
@@ -3722,6 +3722,405 @@ duro
 duro de carácter
 duro
 duro
+ebullición
+Ecatepec 
+echar
+echar de cabeza
+echar especias a la comida 
+echar hojas el árbol
+echar la culpa
+echar la red 
+eclipce
+eclipse de luna
+eclipse de sol 
+eclipse
+eclipse solar
+ecología
+ecologista
+economista
+Ecuador
+ecuador
+ecuatoriano
+edad de oro
+edad
+edificación
+edificar
+edificio
+edificio publico
+educación
+EEUU
+efectivamente
+efectividad
+efectivo
+efélides
+egipcio
+Egipto
+egresado
+eje
+ejecutar
+ejemplificar 
+ejemplo de vida
+ejercicio
+Ejutla 
+el año anterior
+el cual
+elás
+eles pasado
+el otro
+el primero
+el que ladra
+el que ofrece
+el que se retuerce 
+el que
+El Salvador 
+El Vaticano
+el
+el
+elástico
+elección
+electo
+eléctricidad
+eléctricista
+elefante 
+elefantitis
+elemento
+elevador
+elevador
+eliminar
+ellos
+Elota 
+elote
+emanar
+embajada
+embajador
+embarazada
+embarazada
+embarazarse
+embarazarse 
+embarazo
+embarazo
+embarcadero
+embarcado
+embarcar 
+embarcar en altaar 
+embargado
+embargar 
+embargo
+embarrada
+embarrado
+embarrar 
+embaucar
+emborracharse
+embravecer 
+embravecido
+embriagado
+embriagar
+embrujado
+embrujar
+embrujo
+embutido
+Emiratos Árabes Unidos
+emoción
+empalagado
+empalagar
+empanada
+empapado
+empapar
+emparejado
+emparejar
+emparentado
+emparentar
+empastado del libro
+empeine
+empeñado
+empeñar
+empeorar
+emperatriz
+empezado
+empezar
+empinado
+empinar 
+empiojar
+empleado
+empobrecer 
+empobrecido
+empobrecimiento
+empolvado
+empolvar
+empujar 
+empuje
+empuñado
+empuñadura
+empuñar
+en breve
+en casa de
+en castellano
+en cristiano
+en donde
+en donde 
+en el agua
+en el casoío
+en el cielo 
+en el extremo
+en elogón 
+en el lodo 
+en elonte
+en ellos 
+enin
+en la barranca
+en la caja
+en la cima
+en la ciudad 
+en la copa del árbol
+en la cruz
+en la gloria
+en la infancia
+en laañana
+en laañana 
+en la orilla del agua 
+en la orilla
+en lengua nahuatl
+enedio de
+enedio de
+enuchas partes
+en nada
+en nada 
+en ningún lado
+en palacio
+en ruinas 
+en seguida
+en seguida 
+en todas partes
+en unomento
+en vano
+en
+enaguas
+enamorado
+enano
+encajado
+encajar 
+encajoso
+encalado
+encalar
+encallar 
+encandilar
+encantado
+encantamiento
+encarcelado
+encarcelamiento
+encarcelar 
+encargar
+encargo
+encendedor
+encender carbón 
+encender
+encendido
+encerar
+enchilar
+enciclopedia
+encima de él 
+encima de ellos 
+encina
+encino 
+encinta
+enclavarse
+encoger 
+encogido
+encomendado
+encomendar
+encomienda
+encontrado
+encontrar
+encontrar
+encontrarse
+encorvado
+encorvar
+encrucijada
+encuadernación
+encuadernado
+encuadernar
+encuentro
+endemoniado
+enderezado
+enderezar 
+endulzado
+endulzar
+endurecedor
+endurecer 
+endurecido
+enemigo
+enemistad
+energía
+enero
+enfermar
+enfermar
+enfermarse de gota
+enfermedad
+enfermedad veneria
+enfermera
+enfermería
+enfermero
+enfrentar
+enfriado
+enfriamiento
+enfriamiento
+enfriar 
+enfriar
+enfriarse
+engañado
+engañar 
+engañar
+engañar
+engaño
+engaño 
+engañosamente
+engendrado
+engendrador
+engendrar 
+engendrar 
+engendrar
+engendro
+engendro
+engorda
+engordado
+engordar
+engordar 
+engrandecer 
+engrandecer
+engrandecerse 
+engrandecido
+engrandecimiento
+engrosado
+engrosar
+engrudo
+enjabonado
+enjabonar 
+enjambre
+enjuagado
+enjuague
+enjundia
+enjundioso
+enlace
+enladrillado
+enladrillar 
+enlamar
+enlazado
+enlazar 
+enlazarse
+enlodado
+enlodado
+enlodar
+enloquecido
+enloquecimiento
+enmarañado
+enmarañar
+enmarañar
+enojado
+enojar 
+enojar 
+enojarse
+enojo
+enrejado
+enrejado
+enrejar 
+enriquecedor
+enriquecer 
+enriquecer 
+enriquecerse
+enriquecido
+enrojecer
+enrojecido
+enrramado
+enrredado
+ensalada
+ensanchado
+ensanchamiento
+ensanchar
+ensancharse
+ensangrentado
+ensangrntar 
+ensañar
+ensartado
+ensartar 
+ensayado
+ensayar
+ensayar
+ensayo
+enseñanza
+enseñanza
+enseñar
+enseñar 
+enseñar
+ensordecedor
+ensordecer 
+ensordecido
+ensuciar 
+entablar
+entelerido 
+entelerido
+entenciar aurte
+entender
+entender
+entendible
+enteramente
+entero
+entero
+enterrar
+entibiado
+entonces
+entorpecedor
+entorpecer
+entorpecido
+entorpecimiento
+entrada
+entrañable
+entrar por la puerta 
+entrar por todas partes
+entrar
+entre algunos
+entre algunos
+entre árboles
+entre el agua
+entre ellos 
+entre semana
+entre
+entrega
+entregado
+entretejer 
+entretejer cañas
+entretejido
+entrometer
+envejecer
+envejecido
+enviarensajes
+enviar
+envidia
+enviudar el hombre
+enviudar laujer
+envoltorio
+envoltura de papel
+envolver
+envolver
+epazote 
+Epazoyucan 
+epilepsia
+epístola
+época de sequía
+época
+equitación
+equivocación
+equivocado
+era
+era
+érase una vez
+erecto
+Eritrea
+eritreano
+erizo 
+ermita
+ermita
+error
+erupción
 </div>
 
 <div class="nahuatl">
@@ -7405,6 +7804,405 @@ tlalichtic
 opahuac
 tequizqui
 chicahuac
+potzoniliztli
+Ehecatepec
+teca 1
+cuatzinehua
+chilhuia
+quiollotia
+quimitlaxilia
+matlalhuia 2
+icualocatl
+metztli icualocatl
+tonatiuh icualocatl
+icualotl
+tonatiuh icualotl
+yolocemanahuayotl
+yolocemanahuatini
+tequiyotiani
+Ecuatoria
+tlahcotlalticpan
+ecuatoritecatl
+tzoncuiztiqui
+cehuehuetiliztli
+tlatetzompaliztli
+caltia
+tlazolilli
+tlahtocatequitl
+huapahualiztli
+TICA
+cacceceyane
+cazaneliztli
+cazanelli
+ixticehuatl
+exiptotl
+Exipto
+calaquini
+centlazotl
+aitia
+yeyecolia
+neixcuitilli 2
+neyecoliztli
+Exotlan
+amoquinquezxihuitl
+in tlein
+tachcauh
+amoquinquezmetztli
+te
+yacatiac
+chiuhqui
+manqui
+cotzilli
+in aquin
+Cozcatlan 1
+Vaticanopan
+yehuatl 1
+in
+mana 1
+teixquizaliztli
+tlaixquetzalli
+icpiticayotl
+icpiuhqui
+elepantli
+teococoliztli
+tlapeuhcayotl
+acuanhuaztli
+tepantlacoc
+catona
+anehuantin
+Elotan
+elotl
+meya
+tlahtolcalli
+tlahtoliquic
+telleltiliztic
+temocihuiliztli
+tlacahualia
+mocihuia
+telleltiliztli
+tlacahualtiliztli
+acalco
+acallazalli
+acalaquia
+acallaza
+tetlatquicahualtililli
+tlatquicahualtia
+tetlatquicahualtiliztli
+tlaixpepechillotl
+tlaixpepecholli
+ixpepechoa
+ixcuepa
+tlahuana
+pepehualtia
+tlapepehualtilli
+tlahuantilli
+tlahuantia
+nahualilli
+nahualia
+nahualiztli
+tlanacazalli
+TCA (Tlahtocatotl Cepanca ihuicpa Arabia)
+ollinyotl
+nehuiquehualli
+nehuiquehua
+tlaoyotl
+chapanquini
+chapanqui 2
+tlanehuihuililli
+nehuihuilia
+tehuayolcatilli
+tehuayolcatia
+amoxquimiliuhcolli
+xixotl
+tlaquixtiloni
+tlaquixtilia
+ohuitilia 1
+hueycihuatlahtoani
+pehualli 2
+pehua 1
+tlaehuatiquetzalli
+ehuatiquetza
+atemi
+tlacaquilli
+icnotilia
+teicnotililli
+teicnotililiztli
+teuhyotli
+teuhyotia
+matepehua
+tlamatopehualiztli
+pictilli
+pictli
+pictia
+achicpan
+ichantzinco
+caxtilcopa
+macehualcopa
+incanin
+in canin
+atlaco
+notechcopa
+ilhuicac
+itlac
+tlecuilco
+zoquipan
+tepepan
+impan
+zanic
+atlacomolco
+petlacalco
+itzonyoc
+altepepan
+cuauhlacoyocan
+cuauhtoltitechpan
+itle cencuiltonoayan
+piltian
+yohuatzinco
+huatzinco
+atempan
+-nahuac
+nahuatlatoltica
+tlahcoyan
+tzala
+achiquexquian
+atlein
+nitlahco
+acan
+cecentecpantli
+ohzolli
+in niman
+nimanic
+nohuiyampa
+aocmo huacauh
+zanezpanca
+ipan
+cueyetl
+moyoleuhqui
+tzapatl
+tlanamictilli
+namictia 2
+neyollomaxitini
+tlaquililli
+tlaquilia
+acana 1
+ixpoyahua
+tlaxochihuilli
+tlaxochihuiliztli
+tlacalticauhtli
+teilpiloyatiliztli
+teilpiloya
+tlacahua
+tlacahualiztli 1
+tlechihualoni
+xoctlalia
+tletlalia
+tletlalilli
+xicocuitlaltia
+cococihui
+hueyamoxtli
+-icpac
+imicpac
+cuelquitl
+ahuatl
+otztli
+cacalahua
+cototzoa
+tlacototzolli
+tequimactli
+atihuitzoa
+neixiptlatiliztli
+tenamiqui
+namiqui 2
+nextia 2
+namiqui 3
+tlanololli 2
+noloa 2
+onepanco
+matzomaliliztli
+amatzomalilli
+amatzoma
+tenamiquiliztli
+quineuhqui
+tlamalauhtli
+malahua
+necuhtilli
+tzopelia
+tlatepitzahualhuiac
+tepitzalhua
+tlatepitzahualhuilli
+yaotl
+neyaotlaliztli
+teotiliztli
+enero
+cocoxcui
+cocoa
+coacihui 1
+cocoliztli
+cihuatlahuelilotl
+cocoxcihuapixqui
+cocoxcacalli
+tepatli 1
+atemohuia
+tlacecehuilli
+ceceliztli
+cecuiliztli
+cehuia 2
+cecelia
+ceceya
+tlaquelolli
+xicoa
+ixcuepa
+tlaxima
+tequeloliztli
+tequiloliztli
+teixcuepaliztica
+tlacatililli
+tetlacatiliani
+cachihua
+tlacatilia
+pilhuatia
+tetlacatililiztli
+tlacatiliztli
+tlanacayotiliztli
+tlanacayotilli
+chamahua
+nacayotia
+tleyotilia
+mahuitzoa
+momahuitzoa
+tlatleyotilli
+tlatleyotiliztli
+tilauhtli
+tilahua
+tzacuhtli
+tlamolhuilli
+amolhuia
+pipiyolpoltin
+huatzalli
+huatzaliztli
+xochiyotl
+xochiyo
+tetzonhuiliztli
+tlaxamixcalmantli
+xamixcalmana
+apoxcauhqui
+tetzonhuilli
+tzonhuia
+tetzonhuilia
+zoquihuilli
+zoquiyo
+zoquihuia
+temauhtli
+temahuitiliztli
+pazoltic
+tapazolloa
+pazolloa
+tlacualanilli
+cocolia
+cualania
+tlahuelmiqui
+tlahuelmiquiliztli
+tlatepozchayahualli
+tepozmachantli
+tepozchayahua
+tecuiltononi
+cuiltonoa
+tlamachtia 1
+tlamachtia 2
+tlatlamachtilli
+chichilihui
+chichilihuilli
+cuauhxiuhyo
+matlalhuilli
+tlenenelquilitl
+patlauhtli
+tlapatlahualiztli
+patlahua 1
+patlahua 2
+tlaezotilli
+ezotia
+zoma
+tlazozotli
+zozo
+yeyecolli
+moyecolia
+yeyecoa 1
+moyecoliztli
+tlamachtiliztli
+nemachtiliztli 1
+tlazaloltia
+machtia 1
+nemachtia
+tenacatztiliani
+nacatztilia
+tenacatztililli
+catzactilia
+xamanilteca
+apichauhqui
+cehuiloc
+miquitlatzontequi
+yeccaqui
+caqui 3
+mopohuallo
+cenquizca
+ixquichtli
+cenquiztli
+toca 1
+tlayamanilli
+tonz
+ixtlapaltiliani
+ixtlapaltilia
+ixtlapaltililli
+ixtlapaltiliztli
+calaquian
+yolicniuh
+calacoa
+cacalaqui
+calaqui 1
+tenepantlan
+tetzalan
+cuauhtzalan
+atitlan
+intzalan
+nimayan
+-titlan
+nictemactli
+temactli
+xipepanoa
+machana
+tlaxipepanolli
+cuitlaxeloa 2
+zoloa
+zolotic
+ihualia
+titlani
+nexicoliztli
+cihuamiqui
+oquichmiqui
+quimilli 1
+amahuatiliztli
+tecuia
+quemiloa
+epazotl
+Epazoyocan
+mimiquiliztli
+amatlacuilollanetiliztli
+tlahuacapatlan
+imaniatl
+cahuayocehualiztli
+tetlapolotiliztli
+tetlapolotilli
+xiuhmolpiloyan
+tlahuiltecoyan
+occe nechca
+icatoc
+Eritlia
+eritlinecatl
+huitztochtli
+tecaltontli
+teopantli
+tlatlacolli
+zahuatli
 </div>	 
 		 
 	 </body>
