--- a/index.html
+++ b/index.html
@@ -4422,6 +4422,227 @@ extreno
 eyaculación
 eyaculado
 eyacular
+fábrica
+fabricante
+fabricante de candelas
+fachada
+fácil
+fácil 
+facilidad
+facilitar
+fácilmente
+fácilmente 
+facultad
+faisán
+faja
+falange
+falda
+falsedad
+falsedad
+falsificación
+FALSO
+falso 
+falta
+faltante
+faltar
+fama
+fama
+familia
+familiar
+familiaridad
+famoso
+famoso
+fanático
+fantasia
+fantasma
+fantasma
+fantástico 
+farmacéutico
+farmacéutico
+farmacia
+faro
+farsante
+fascinador
+fatigado
+fatigar 
+favor
+favorable
+fax
+fe
+febrero
+fechar
+fecundar
+felicidad
+felicitación
+feliz
+feliz aniversario
+feliz navidad
+felizmente
+femenino
+feminidad
+feo
+feo
+feria
+fermentar
+fertilidad
+festividad
+festividad
+fetiche
+fétido
+fétido
+fi
+fianza
+fibra
+fibra
+ficha de dominó
+ficha
+ficha
+fidelidad
+fiebre
+fiebre
+fiel
+fiereza
+fiesta de la vendimia
+fiesta de laslores
+fiesta
+fiesta
+figura
+fijar la vista
+fila
+Filipinas
+filipino
+filo
+filoso
+filosofía
+filosofo
+fin
+finado
+finados
+finalista
+finalmente
+finalmente
+fingido
+finlandés
+finlandés
+Finlandia
+firma aquí
+firma
+firmado
+firmamento nocturno
+firmar
+firmemente
+fiscal
+fisco
+física
+físico
+flaco
+flama
+flamingo
+flauta
+flebotomía
+flecha
+flechador
+flechar
+flema
+flojera 
+flojo
+flojo 
+flor de alcatraz
+flor de amapola
+flor de girasol 
+flor deaíz
+flor de nochebuena 
+flor de orquídea 
+flor de tabachín
+flor de tulipán
+flor olorosa
+floreado
+florero
+flores
+floricultor
+flota del barco 
+foco
+foco
+fogón
+follaje
+follar
+fonda
+fondo delar
+fondo
+foráneo
+forcejar
+forjado
+forjadura
+forma
+forma
+formado
+formar
+fornicar con personas delismo sexo
+fornicar
+fornido
+fornido
+forraje
+forrajero
+fortaleza
+fortaleza
+fortaleza
+forzar 
+foto
+fotografía
+fragancia
+fragante
+fragata
+frágil
+frambuesa
+frambueso 
+francés
+Francia
+franciscano
+franco
+franja
+frecuentemente
+freidora 
+frente a ellos
+frente a su casa
+frente
+fresa 
+fresco
+frescura
+frescura
+fresno 
+fríjol
+fríjol tierno
+frijolar
+frijoles
+frío
+friolento
+frito
+frito
+frontera
+frotar
+fruta
+fruta verde
+frutilla
+fruto agridulce
+fruto
+fuego
+fuego nuevo
+fuente
+fuero
+fuerte
+fuerza del hígado
+fuerza
+fugitivo
+fumador
+fumar
+fundación de la ciudad
+fundador de la ciudad
+fundible
+funesto
+furioso
+fútbol
+futbolista
+futuro
 </div>
 
 <div class="nahuatl">
@@ -8805,6 +9026,227 @@ tlachaliliztli
 tepolatiliztli
 tepolatililli
 tepolatia
+tlayocoyan
+tlatlaliani
+ocochiuhqui
+caltoxayac
+ayohui
+amo huahui
+ayohuiliztli
+ayohuica
+ayohuitica
+ayohuica
+huelitiliztli
+coxolitli
+nelpilolli
+mapiltepoztli
+cueitl
+teixcuepayotl
+iztlacayotl
+teixcuepaliztli
+teixcuepalli
+chahuac
+polihui 2
+acanoyehui
+acocholoa
+tenyiliztli
+tenyotl
+chantlacahuan
+cenyello
+cenyelizcayotl
+tenyo
+tenyotecatl
+teotlalnotequi
+topalnemiliztli
+centlalpachtontli
+tlapehuiloni
+topalli
+panamacac
+papiani
+pacalli
+atlaneixtiloyan
+omeyollo
+quetzaltiani
+teciauhtli
+ciahuitia
+tepelehuiliztli
+palehuiloni
+faxi
+neltococayotl
+febrero
+xacaloa
+tlacatiltia
+paquilizcayotl
+paquiliztli 
+paquini
+cualli ilhuichihualli
+cualli tlacatilizilhuitl
+papaquiliztica
+cihuatic
+cihuayotl
+amocualneci
+amo cuacualtzin
+tianquizpan
+chichilia
+tlamochihualiztli
+ilhuicatl 2
+ilhuiyotl
+colotli 2
+xoquiyac
+palanqui
+f
+tlahuelyollotiliztli
+ichtli
+tzayanatl
+tlapoapatolli
+olpatolli
+amatlacuilotontli
+netlacanequiliztli
+comitl 1
+atonahuiliztli
+netlacanequini
+tecuayotl
+xocomecapixquipan
+xochilhuitl
+ilhuitzintli
+mitotl
+tlacuilomachiotl
+temoa 2
+pantli 2
+Filipinah
+filipintecatl
+tenatcatl
+tenatquitl
+yolizmatiliztli
+motlazoliztlapiani
+tlamiliztli
+huelomiqui
+mimihcatzitzintin
+tlamini
+zantepan
+zatlatzonco
+tlapictli
+fillatl
+fillantecatl
+Fillandia
+ma xihcuilo nican
+tocatlaliztli
+tocayotlilneltilli
+citlaltlachtli
+tocatlalia
+tlapaltiliztica
+tlachixcauhtli
+tlachixcauhtiliztli
+cemanahuatiliztli
+cemanahuatini
+xohuacqui
+tlemahuatl
+xochiaztatl
+tlapitzalli
+tezoquiztli
+mitl
+tlaminqui
+huitolohua
+alachin
+achicahualiztli
+achicahuaqui
+tlatzahqui
+canauhxochitl
+amapoxochitl
+chimalxochitl
+xiloxochitl
+cuetlaxochitl
+acatzahuixochitl
+chacamaxochitl
+xochitolipan
+cacahuaxochitl
+xochimoyehuac
+necocuillotecomatl
+xochimeh
+xochimanqui
+acalli cemantihuitztli
+tehuilotlahuilmeyallotl
+icpilolli
+tlecuitl
+xiuhyo
+pitza
+tlamalhuiloni
+ahuehcapan
+zentlani
+zanhuitztli
+ochtiltia
+tlapiqui
+tlapiquiliztli
+yuhcayotl
+chihualiztli
+chihualli
+chihua 1
+tzincuiloa
+ahuilnemi
+tlahuapauhtli
+tlachicauhtli
+zacatextli
+zacamiyotl
+yaocalli
+chicahualiztli
+tolchicahualiztli
+tlachihualtia
+tlatolcuapalli
+tlatolcuepayotl
+calaquiliztli 2
+ahuiac
+acalli teyaochihuani
+achicahuac
+coamitl
+coamicuahuitl
+gallitl
+Gallia
+Francisco teopixqui
+tlatlacatl
+tlaltentli
+achi miecpa
+tetzonyocaxitl
+imixpantzinco
+icalixpan
+ixcuaitl
+chilxocotl
+cecelic
+tlacececatl
+tlaceceyaliztli
+ahuexotl
+etl
+etzalli
+etlan
+emeh
+iztic
+cececmiquini
+tlatzoyonilli
+tzoyonqui
+calixcuatl
+momotzoa
+xochicualli
+xocotetl
+acecexocotl
+xocotl
+cuitlaxocotl
+tletl
+tlimaquiliztli
+ameyalli
+tlatzontecoyan
+chicauhtoc
+ihiyotl
+chicauhtiliztli
+choloani
+popocani
+popoca
+altepetzintiliztli
+altepetzintiani
+atililoni
+tlachicochiuhtli
+aacqui
+xoctapayoliztli
+xotapayoliani
+ocachihualli
 </div>	 
 		 
 	 </body>
