--- a/index.html
+++ b/index.html
@@ -4643,6 +4643,237 @@ furioso
 fútbol
 futbolista
 futuro
+gaita
+gaitero
+galápago
+galaxia
+gallina de agua
+gallina 
+gallina
+gallina zambullidora
+gallinas
+gallinaza
+gallinero
+gallo 
+Gambia
+gambiano
+ganadero
+ganado
+ganar 
+ganso
+garabato
+garbanzo 
+gargajo
+garganta
+gárgola
+garrafa
+garrapata
+garrocha
+garza 
+garza 
+garza lagunera
+gas
+gasolina
+gastado
+gastar 
+gato 
+gatoontés 
+gavilán 
+gaviota
+geiser
+gelatina
+gemelo
+gemido
+gemir
+genealogía
+generación
+general
+genero
+generosidad
+generoso
+generoso
+gente del pueblo
+gente
+gente
+gente rica
+geografía
+Georgia
+georgiano
+germen
+germinación
+germinado
+germinar 
+gesto
+Ghana
+gi
+gigante
+gigante
+gigantón
+gimnasia
+gimnasio
+ginecólogo
+girador
+girar
+gis
+gitana
+gitano
+gladiatorio
+glande
+globo aerostático
+globo
+globo terráqueo
+glorificado 
+glorificar 
+glosario
+glosario
+glotón
+glotón
+glotonería
+gobernación
+gobernado
+gobernante
+gobernantealo
+gobernar 
+gobierno
+golf
+golfo
+golondrina 
+golosina
+goloso
+golpe
+golpeado
+golpear
+golpear el agua
+golpear
+goma
+gordo
+gordolobo 
+gordura
+gorgojo
+gorila
+gorra de estambre
+gorra
+gorrión 
+gota de agua
+gota
+gotear
+gotera
+gotero
+gotero
+gozar
+gozo
+gozo
+gracias
+gracioso
+grada
+graduación
+graduado
+graduar
+grafía
+graficador
+grama
+gramática
+gramatical
+grana
+Granada
+granada
+granada
+granadino
+granado
+grande
+granero 
+granizada
+granizar
+granizo
+granja
+grano de café
+grano
+grano
+grasa corporal
+grasa corporal
+grasa
+grasoso
+gratis
+gratis
+gratitud
+grava
+grave
+greca
+Grecia
+greñudo
+griego
+grieta
+grillo 
+gripa
+gris
+gritar 
+gritarucho
+gritar
+grito
+grosella
+grosería
+grueso
+grueso
+grulla
+grullaexicana
+grumete
+grumete
+gruñido
+guacal
+guacal
+guacamaya 
+guacamole
+guadaña
+guajarro
+guaje
+guajolota
+guajolota
+Guamuchíl 
+guamuchíl 
+guanacaste
+guanacaste 
+guanajuatense
+Guanajuato 
+guante
+guaraní
+guardado
+guardaespaldas
+guardar
+guardarse
+guardián
+guardián
+Guatemala 
+guatemalteco
+guatemalteco 
+guayaba
+guayabo 
+guayacán 
+guelaquetza
+guerra cristera
+guerra
+guerrerense
+guerrero
+Guerrero 
+guerrero águila
+guerrero tigre
+guía
+Guinea
+Guinea Bissau
+Guinea ecuatorial
+guineano
+guirnalda delores
+guitarrista
+gula
+gusano de agave
+gusano de carne
+gusano deaguey
+gusano de seda
+gusano
+gusanoedidor
+gustar
+gustar
+gustar
+gusto
 </div>
 
 <div class="nahuatl">
@@ -9247,6 +9478,237 @@ aacqui
 xoctapayoliztli
 xotapayoliani
 ocachihualli
+ehuatlapitzalli
+ehuatlapitzalnemini
+xochayotl
+citlalpopocac
+atotolin
+totolin
+totolli
+acitotolli
+totoltin
+totolcuitlatl
+totoltepancalli
+caxtotolli
+Ganbia
+ganbiatl
+cuacuauhpixqui
+cuacuahuaqui
+tlani 2
+tlalalacatl
+chicoltic
+etetl
+tozcacualactli
+tozquitl 1
+ecacoyoctli
+ocapilolli
+mazatemitl
+tlamiminaloni
+azatl
+aztatl
+axoquen
+ahuiyapopotl
+techiahuacatlatilolli
+zoltic
+tlamamaca
+miztontli
+tlacomiztli
+tlocuauhtli
+atototl
+apopocatl
+gelatinatl
+coatli
+tenaliztli
+tena
+mecayotl
+quintlacatiliztli
+ipanocayotl
+cecentlamantli
+tlahtocamecayotl
+yolopiltic
+yolotlapaltic
+chantlacatl
+tlacameh
+macehualtin
+tlatquitlacatl
+cemanahuactiliztli
+Georgia
+georgitecatl
+tlapixotli
+tlapixoliztli
+tlapixolli
+pixoa
+xoloxayacatl
+Gania
+g
+quinametli
+tlacahueyac
+acahualli
+neyecochihualiztli
+netecolizcoyan
+cihuaticitl
+malacachoni
+malacachoa
+tizatl
+cihuatlachixqui
+andaloxtecatl
+chacmolli
+xipintecomatl
+patlanizolxittotomoctli
+tlapitzaxiquipilli
+cemanahuactli
+tetenyotilli
+tenyotia
+amoxtlahtolli
+tlahtolcentiliztli
+pitzotli
+pozatini
+pozatiliztli
+tepacholizyotl
+tepcholli
+tlahtoani
+atlacatlahtoani
+pachoa 1
+tepacholiztli
+golfiztli
+anepantlan
+cuicuitzcatl
+xochitlacualiztli
+xochitlacuani
+xoxoliztli
+xoxotoc
+pachilia
+chapalia
+tzotzona
+tetlaixpolhuilli
+tomahuac
+tlacochichic
+tomahuacayotl
+yacatototl
+ozomatl
+ecahualichcatl
+ecahualli
+molotl 1
+atzintli
+chichipictli
+pipica
+tlaxicaliztli
+pipicaliztli
+atlanteittani
+aaqui 1
+aaquiliztli
+papaquiliztli
+tlazohcamati 2
+michtic
+tlamamatlatl
+mahuitzmactiliztli
+mahuitzmactli
+mahuitzmaca
+tlilmachiotl
+amatlacuilopoalcalli
+acacahuaztli
+netlahtolmachitiliztli
+tlahtolmachtiqui
+nocheztli
+Granadia
+ezxocotl
+tepozxiuhqui
+granatecatl
+ezxococuahuitl
+huey
+achcalli
+texihuitli
+texihui
+texihuitl
+chantlalcalli
+cafecacahuatl
+zahuatl
+achtli
+cuitlanatztic
+ceceyotl
+chiahuizotl
+chiahuic
+atlacazoyotl
+amotlazotli
+tlaxocamalcayotl
+apoltetl
+malehuacuicatl
+xicalcoliuhqui
+Helenoyan
+tzomiyo
+helenotecatl
+xotzatzayanaliztli
+cuicachapolin
+tzonpiniliztli
+nextic
+tzatzilia
+chiquilichtia
+tzatzi
+chichiquitzatziliztli
+capolxocotl
+acualtlahtolli
+polli
+pol-
+quetzalaztatl
+tocuilcoyotl
+acalticapanoni
+acallanelotl
+cotaloliztli
+huacalli
+ohuacalli
+cochotl
+ahuacamolli
+cuacuauhximani
+atoyatetl
+huaxitl
+cihuatotolli
+hueitotolin
+Cuauhmochtli
+cuauhmochtli
+cuanacaxtli
+cuauhnacaztli
+cueyatlalcatl
+Cueyatlalco
+mayehuatl
+cuaranitl
+tlapialli
+achichintli
+pia 1
+pia 4
+tlapiani
+pixqui
+Cuauhtemallan
+cuauhtemalatl
+cuauhtemaltecatl
+xaxocotl
+xaxocuahuitl
+matlacuahuitl 1
+gelagetza
+quixtianomeh in yaoyotl
+yaoyotl
+cihuatecatl
+teyaochihuani
+Cihuatlan
+yaocuauhtli
+yaocelotl
+teyacaniliztli
+Ginea
+Ginea Bisao
+Ginea Nepantlan
+gineatl
+xochicuaitl
+mecahuehuecuicani
+apitzotl
+meocuilli
+nacaocuilli
+chilocuilli
+tzauhquiocuilli
+ocuilli
+tetlatlamachiuhqui
+pactia
+huelitta
+paloa
+tlahuelittaliztli
 </div>	 
 		 
 	 </body>
