--- a/index.html
+++ b/index.html
@@ -4874,6 +4874,287 @@ gustar
 gustar
 gustar
 gusto
+haba 
+haba 
+haber sol
+habichuela
+hábil
+hábil
+hábil
+habilidad
+habitación para enfermos
+habitado
+habitante
+habitar
+habito
+habla
+habla suave
+hablador
+hablante
+hablar
+hablar deás
+hablar educadamente
+hablarucho
+hace años
+haceucho
+hace poco
+hace varios días
+hacer
+hacer agujeros
+hacer dar vueltas al agua
+hacer dinero 
+hacer llorar
+hacer reír
+hacer señas 
+hacer tortillas
+hacer tortillas
+hacer trabajar
+hacer
+hacha
+hacia
+hacia adentro
+hacia allá 
+hacia arriba
+haciauera 
+haciaí
+hacienda
+Haití
+haitiano
+halcón 
+hallar 
+hambre
+hambriento
+hambriento de dios
+hambriento de sangre
+hambruna
+haragán
+harina de cacao
+harina
+harpón
+hasta luego
+hastaañana 
+hazaña
+hazaña
+hebilla
+hebra
+hechizar 
+heder
+hediondo
+helada
+helada
+heladera
+helado
+helado
+helar
+helarse las plantas
+helicóptero
+hemipléjía
+hemorragia nasal
+hemorroides
+hender
+henequén 
+heno
+hepatitis
+herbal
+herbolario
+herbolario
+heredero
+hereje
+herejía
+herencia
+herida
+herido de sangre
+herir
+herirse 
+hermanaayor
+hermano
+hermano 
+hermano
+hermanoayor
+hermoso
+hermosura
+hermosura
+hernia
+herrado
+herradura
+herramienta
+herrante 
+herrar
+herrería
+herrero
+hervir
+hi
+Hidalgo
+hidalgo
+hidalgo
+hidalguense
+hidalguía
+hidrocálido
+hidropesía
+hidrosfera
+hiel
+hielo
+hierba de San Nicolás 
+hierba
+hierro derretido
+hígado
+higo
+higuera 
+hija
+hijas
+hijo del pueblo
+hijo
+hijos
+hijos
+hilo
+himen
+hinchado
+hinduismo
+hipocresía
+hipocrita
+hipopótamo
+hispanidad
+historia deéxico 
+historia
+historial
+hocico
+hocicón
+hockey
+hoja de árbol
+hoja deaíz
+hoja de papel
+hoja elegante
+hoja
+hoja santa
+hola
+hola
+Holanda
+holandés
+holgazán
+hollín
+hombre asiático
+hombre casado
+hombre de casa
+hombre de paz
+hombre
+hombre
+hombre pez
+hombres del occidente
+hombres
+hombro
+homicida 
+homicida
+homosexual
+homosexual
+homosexualidad
+homoxesual
+honda
+hondo
+Honduras 
+hondureño
+honestidad
+hongo alucinógeno
+hongo
+hongo venenoso
+hongos
+honor
+honor
+honra
+honrado
+hora
+hora
+horfanato 
+horizonte
+hormiga 
+hormiga reina
+hormiguear
+hormiguero
+horno de pan
+horno
+hortaliza
+hospedado
+hospedado
+hospedaje
+hospedar
+hospedar 
+hospital
+hostia
+hotel
+hotelero
+hoy por laañana 
+hoy
+hoyo de animal
+hoyo de topo
+Huajuapan 
+Huamantla 
+huapango
+huarache
+huasteco
+huastecos
+Huatulco 
+Huatusco 
+Huauchinango 
+hueco
+hueco
+Huehuecoyotl 
+Huehuetenango 
+Huehuetoca 
+Huehuetotetl 
+Huejotitan 
+huejotzinca
+Huejotzingo 
+Huejutla 
+huerfano
+huerta delores 
+huerto de árbolesrutales
+huerto delores
+huerto
+huesero
+hueso de pescado
+hueso
+huesousical
+huésped 
+huevo de codorniz
+huevo de gallina
+huevo de pato
+huevo de ranacuajo 
+huevo
+hueypachtli 
+Hueypoxtla 
+hueytecuilhuitl 
+hueytozoztli 
+Huichapan 
+huichol
+huida
+huir
+Huitzila 
+Huitzilihuitl 
+Huitzilopochtli 
+Huixquilucan 
+huizache
+hule
+hule
+humanidad
+humanos
+humeante
+húmedo
+humildad
+humillación
+humillante
+humillar 
+humillarse
+humo
+humo
+humor
+hundido
+hundimiento 
+hundir
+húngaro
+Hungría
+huracán
+hurón 
+hurtado
+hurtar
 </div>
 
 <div class="nahuatl">
@@ -9709,6 +9990,287 @@ pactia
 huelitta
 paloa
 tlahuelittaliztli
+ahuaxtli
+caxtiletl
+tona
+exotontli
+yolotl 2
+tlacaquini
+yolo 2
+yolocayotl
+cocoxcochihuayan
+altepetlalilli 1
+nemini
+nemi
+tlamamalli 4
+tlahtoliztli
+tlahtolhueliliztli
+chachalacani
+tlahto
+tlahtoa
+camaxohui
+tecpiltlahtoa
+tlahtoltia
+cuix yeh xiuhtin
+cuix yeh huehcan
+quin axcan
+yectel
+ayi
+colonia 2
+amamalacahoa
+achihuatia
+chotia 1
+huetzquitia
+tlaixtlalia
+tlaxcalchihua
+tlaxcaltia
+tequitiltia
+chihua 2
+tlaximaltepoztli
+tehuicpa
+tlaticpa
+nechcampa
+acopahuic
+cuahuacpa
+nohuicpa
+axcatl
+Haitia
+haitiatl
+tohtli
+teyoitta
+mayanaliztli
+apitzmiquini
+apitzteotl
+eztlacuani
+apitzmiquiztli
+atleyeni
+cacahuapinolli
+yoltextli
+chichquilli
+cualohtli
+ixquichca moztla
+cuauhyotl
+tetzahuitl
+tezcacuitlapilli
+ceicpatl
+tlachihuia
+potoni
+hiyac
+cehuitzitli
+yehuatli
+cepayaloni
+cemicqui
+itztic
+cehuetzi
+cecualoa
+pipiyolcalli
+cocototzauhtli
+yacaizquizatl
+xochicihuiztli
+xamania
+nacuametl
+zacayemani
+elcocoliztli
+xixiuhtlan
+paiximatqui
+paiximatquiyotl
+tlacemolollo
+teotlatolcuepani
+teotlatolcuepaliztli
+tetlacahuililli
+tlahuitectli
+chipeliuhezqui
+tlahuitequi
+tlahuitequilia
+hueltiuhtli
+temini
+teicauhtli
+icnitl
+tiachcauhtli
+quetzalli 1
+quetzalxiliztli
+quetzalcayotl
+xoxalli
+tepatililli
+cahuayocactli
+tepoztlatquitl
+tepatiliani
+patilia
+tepozpitzahuayan
+tepozchiuhqui
+potzonia 2
+h
+Hidalgo
+calpanpilli
+tecpilli
+hidaltecatl
+tecpillotl
+aguascaltecatl
+atemaliztli
+atlaliztli
+chichicatl
+itzcatqui
+yoloxiltic
+xihuitl 2
+atepoztli 1
+eltapachtli
+hicox
+hicoxcuahuitl
+cihuaconetl
+cihuacocone
+altepecaconetl
+conetl
+pilhuan
+cocone
+icpatl
+xiuhnenetl
+xixiquipiltic
+indoyotl
+neyectoquiliztli
+neyectocani
+ipopotamotl
+hispaniyotl
+mexicatlahtollotl
+nemilizcayotl
+tlacuilolli
+tenchimalli
+camaxipolli
+hoquiliztli
+cuauhtlapalli
+ixhuatl 1
+amatlapalli
+chichixihuitl
+izuatl
+tlamapaquilitl
+hao
+niltze
+Hollandia
+hollantecatl
+tlatziuhqui
+cuichtli
+axiatlacatl
+cihuahuac
+notlacamatini
+yocoxcatlacatl
+tlacatl
+oquichtli
+tlacamichin
+icalaquiantlacah
+oquichtin
+acolli
+temictiani
+tecmictiani
+tecuiloni
+huilontli
+huilonyotl
+huilotiani
+temalatl
+huehcapan
+Zollan 1
+zoltecatl
+mimatiliztli
+apipiltzin
+nanacatl
+micnanacatl
+nanacameh
+malhuilocayotl
+itauhcayotl
+temahuitzotl
+temahuitzotilli
+iman
+imanin
+icnopilcalli
+ahuemaniliztli
+azcatl
+tlaletzatl
+cuecueyoca
+azcaxalli
+tlecalpantli
+xamixcaltexcaxitl
+quilitlan
+tecochitililli
+tecililli
+tecochitiliztli
+palcohui
+cochitilia
+cocoxcalli
+teotlaxacalli
+axihuayan
+axihuayani
+axcancualca
+axcan
+potzalli 1
+tozanpotzalli
+Huaxapan
+Cuauhamatlan
+cuauhpanco
+tecactli
+cuextecatl
+cuextecah
+Cuauhtolco
+Cuauhtochco
+Cuauhchicnauhco
+acatic
+cacahuatic
+Huehuecoyotl
+Huehuetenanco
+Huehuetocac
+Huehuetotetl
+Huexotitlan
+huexotzincatl
+Huexotzinco
+Huexotlan
+icnopilli
+xochitlalli
+xocuauhtlan
+xochimilpan
+quilimilpan
+omiquetzani
+michomitl
+omitl
+omicahuiztli
+tetlancochiqui
+zoltetl
+totoltetl
+canauhtetl
+atempolocotli
+atetl
+hueypachtli
+Hueypochtlan
+hueytecuilhuitl
+hueytozoztli
+Hueychiapan
+huichotl
+chololiztli 2
+choloa
+Huitzilac
+Huitzilihuitl
+Huitzilopochtli
+Huitzquilocan
+huitzachin
+olin
+olli
+tlacayotl
+tlacah
+popocac
+tlaxoloncatl
+necnomatlicayotl
+netlalchitlazaliztli
+netlalchitlazoni
+tlalchitlaza
+tepitonoa
+popoctli 1
+poctli
+chihuiliztli
+polanqui 1
+actitlazatiliztli
+aaqui 2
+hungarinecatl
+Hungaria
+ehecanamictiliztli
+itzcuintochtli
+nichtequilli
+nichtequi
 </div>	 
 		 
 	 </body>
